Updated tests and converted Routine to record on TA's recommendation